--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -2,8 +2,8 @@
 logo = "images/logo.png"
 logo_width = "200px"
 # Meta data
-description = "This is meta description"
-author = "Themefisher"
+description = "Experiencia y tecnología innovadora que transforma tu empresa"
+author = "aristaequis"
 # contact form action
 contact_form_action = "#" # contact form works with https://formspree.io
 
