--- a/config/_default/languages.toml
+++ b/config/_default/languages.toml
@@ -13,15 +13,15 @@ footer_content = "Experiencia y tecnología innovadora que transforma tu empresa
 copyright = "© aristaequis 2021"
 
 ############################# English ############################
-#[en]
-#languageName = "English"
-#title = "aristaequis - Digital Transformation"
-#contentDir = "content/english" # content/english
-#weight = 2
+[en]
+languageName = "English"
+title = "aristaequis - Digital Transformation"
+contentDir = "content/english" # content/english
+weight = 2
 ############ footer content ##########
-#footer_menu_left = "Company"
-#footer_menu_middle = "Product"
-#footer_menu_right = "Support"
-#footer_content = "Lorem ipsum dolor sit amet, consectetur elit. Consjat tristique eget amet, tempus eu at cttur."
+footer_menu_left = "About"
+footer_menu_middle = "Blog"
+footer_menu_right = "Support"
+#footer_content = "Experience and innovative technology that transforms your company."
 # copyright
-#copyright = "Design By [Themefisher](https://themefisher.com/) Develop By [Gethugothemes](https://gethugothemes.com/)"
+copyright = "© aristaequis 2021"
