--- a/config/_default/menus.en.toml
+++ b/config/_default/menus.en.toml
@@ -10,56 +10,27 @@ url = "blog"
 weight = 2
 
 [[main]]
-name = "Pricing"
-url = "pricing"
+name = "About Us"
+url = "about"
 weight = 3
 
-[[main]]
-name = "Contact"
-url = "contact"
-weight = 4
-
-[[main]]
-name = "FAQ"
-url = "faq"
-weight = 5
-
 # footer menu left
-[[footer_left]]
-name = "About Us"
-url = "#"
+#[[footer_left]]
+#name = "Inicio"
+#url = "#"
+#weight = 10
 
-[[footer_left]]
-name = "Quick Start"
-url = "#"
-
-[[footer_left]]
-name = "Pricing"
-url = "pricing"
-
+#[[footer_left]]
+#name = "Acerca"
+#url = "acerca"
+#weight = 20
 
 # footer menu middle
-[[footer_middle]]
-name = "Pricing"
-url = "pricing"
-
-[[footer_middle]]
-name = "Platform"
-url = "#"
-
-[[footer_middle]]
-name = "Features"
-url = "#"
+#[[footer_middle]]
+#name = "Blog"
+#url = "blog"
 
 # footer menu right
-[[footer_right]]
-name = "Privacy Policy"
-url = "privacy-policy"
-
-[[footer_right]]
-name = "Terms & Conditions"
-url = "terms-conditions"
-
-[[footer_right]]
-name = "FAQ"
-url = "faq"
+#[[footer_right]]
+#name = "Política de Privacidad"
+#url = "privacy-policy"
