--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -21,7 +21,7 @@ steps:
   - 'hugo.tar.gz'
   - 'https://github.com/gohugoio/hugo/releases/download/v${_HUGO_VERSION}/hugo_extended_${_HUGO_VERSION}_Linux-64bit.tar.gz'
   waitFor: ['-']
-
+ 
 - name: 'ubuntu:18.04'
   args:
   - 'bash'
@@ -32,10 +32,4 @@ steps:
     mv firebase /tmp
     chmod 755 /tmp/firebase
     /tmp/hugo
-  waitFor: ['-']
-    
-- name: 'gcr.io/cloud-builders/gsutil'
-  args: [ 'cp', '-r',
-            './public',
-            'gs://aristaequis-ro/test' ]
-
+    /tmp/firebase deploy --project ${_FIREBASE_PROJECT_NAME} --non-interactive --only hosting -m "Build ${BUILD_ID}"
